# stories-crawl

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: nguon-tieng-trung.md
docs/superpowers/plans/: 2026-07-09-stories-crawl.md  2026-07-11-browser-mode-flaresolverr.md  2026-07-11-translation.md
docs/superpowers/specs/: 2026-07-08-stories-crawl-design.md  2026-07-10-browser-mode-design.md  2026-07-11-translation-design.md
stories_crawl/: cli.py
stories_crawl/adapters/: base.py  flaresolverr.py  lncrawl_bridge.py
stories_crawl/core/: downloader.py  registry.py  translator_loop.py
stories_crawl/storage/: db.py  files.py  glossary.py
stories_crawl/translate/: anthropic.py  base.py  openai_compat.py  prompt.py  registry.py
tests/: conftest.py  test_cli.py  test_db.py  test_downloader.py  test_files.py  test_flaresolverr.py  test_glossary.py  test_lncrawl_bridge.py  test_registry.py  test_translate_anthropic.py  test_translate_openai.py  test_translate_prompt.py  test_translate_registry.py  test_translator_loop.py
